--- a/src/components/project-gallery/ProjectCard.css
+++ b/src/components/project-gallery/ProjectCard.css
@@ -33,7 +33,7 @@
 #techStack {
   /* Styling for the container */
   height: 53px;
-  background-color: #DDE6ED;
+  background-color: #dde6ed;
   /* border-radius: 20px 20px 0 0; */
   display: flex;
   align-items: center;
@@ -64,13 +64,12 @@
   min-width: 100px;
   height: 25px;
   border-radius: 30px;
-  background-color: #0C134F;
+  background-color: #0c134f;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
   color: white;
-  transition: .6s;
+  transition: 0.6s;
 }
 
 .tech-item:active {
@@ -79,5 +78,5 @@
   overflow: visible;
   color: #000;
   background: #fff;
-  transition: .3s;
+  transition: 0.3s;
 }
